# 8080-emulator-rust

./: .gitignore  Cargo.toml  README.md  build.rs
benches/: benchmarks.rs
i8080-web/: package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
i8080-web/public/pkg/: intel_8080_emu_rust.d.ts  intel_8080_emu_rust_bg.js  intel_8080_emu_rust_bg.wasm  intel_8080_emu_rust_bg.wasm.d.ts
i8080-web/public/wasm/: README.md  intel_8080_emu_rust.d.ts  intel_8080_emu_rust.js  intel_8080_emu_rust_bg.js  intel_8080_emu_rust_bg.wasm  intel_8080_emu_rust_bg.wasm.d.ts  package.json
i8080-web/src/: App.tsx  Emulator.css  index.css  types.d.ts
i8080-web/src/components/: emulator.tsx  futuristic-neon-emulator.tsx
scripts/: build-native.sh  build-wasm.sh  dev-web.sh
src/: disassembler.rs  lib.rs  main.rs  space_invaders_wasm.rs  utils.rs
src/emulator/: cpu.rs  data_types.rs  input.rs  instruction_lookup.rs  machine.rs  mod.rs
src/tests/: cpu_diag_test.rs  instruction_tests.rs  mod.rs
